# SABPN

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
phone_auth/: manage.py
phone_auth/auth_app/: models.py  serializers.py  tests.py  views.py
phone_auth/phone_auth/: asgi.py  settings.py  urls.py  wsgi.py
